crates/rekindle-client/tests/ui/fail/desktop_module_without_feature.rs
fn main() {
    let _ = rekindle_client::desktop::run;
}
